<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credit_card_details_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CreditCardMainActivity">

    <LinearLayout
        android:id="@+id/credit_card_number_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/credit_card_text_input_layout"
            style="@style/CreditCardTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            app:boxStrokeColor="#13AC3F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/credit_card_number_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credit_card_number_ll">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/credit_card_expiry_text_input_layout"
            style="@style/CreditCardTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:hint="@string/credit_card_expiry_date"
            app:boxStrokeColor="#13AC3F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/credit_card_expiry_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/credit_card_security_code_text_input_layout"
            style="@style/CreditCardTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:hint="@string/credit_card_security_code"
            app:boxStrokeColor="#13AC3F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/credit_card_security_code_text_view"
                android:layout_width="match_parent"
                android:maxLength="3"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_card_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credit_card_details">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/credit_card_firs_name_text_input_layout"
            style="@style/CreditCardTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:hint="@string/first_name"
            app:boxStrokeColor="#13AC3F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/credit_card_first_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/credit_card_last_name_text_input_layout"
            style="@style/CreditCardTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:hint="@string/last_name"
            app:boxStrokeColor="#13AC3F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/credit_card_last_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_payment_btn"
        style="@style/SubmitPaymentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="24dp"
        android:padding="15dp"
        app:backgroundTint="#13AC3F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credit_card_holder_name" />

</androidx.constraintlayout.widget.ConstraintLayout>